; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_tls_gnutls.c_print_tls_error.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_tls_gnutls.c_print_tls_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EAGAIN = common dso_local global i32 0, align 4
@AV_LOG_WARNING = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1
@AV_LOG_ERROR = common dso_local global i32 0, align 4
@EIO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @print_tls_error to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @print_tls_error(i32* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  switch i32 %6, label %17 [
    i32 131, label %7
    i32 130, label %10
    i32 129, label %10
    i32 128, label %11
  ]

7:                                                ; preds = %2
  %8 = load i32, i32* @EAGAIN, align 4
  %9 = call i32 @AVERROR(i32 %8)
  store i32 %9, i32* %3, align 4
  br label %26

10:                                               ; preds = %2, %2
  br label %23

11:                                               ; preds = %2
  %12 = load i32*, i32** %4, align 8
  %13 = load i32, i32* @AV_LOG_WARNING, align 4
  %14 = load i32, i32* %5, align 4
  %15 = call i32 @gnutls_strerror(i32 %14)
  %16 = call i32 @av_log(i32* %12, i32 %13, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i32 %15)
  br label %23

17:                                               ; preds = %2
  %18 = load i32*, i32** %4, align 8
  %19 = load i32, i32* @AV_LOG_ERROR, align 4
  %20 = load i32, i32* %5, align 4
  %21 = call i32 @gnutls_strerror(i32 %20)
  %22 = call i32 @av_log(i32* %18, i32 %19, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i32 %21)
  br label %23

23:                                               ; preds = %17, %11, %10
  %24 = load i32, i32* @EIO, align 4
  %25 = call i32 @AVERROR(i32 %24)
  store i32 %25, i32* %3, align 4
  br label %26

26:                                               ; preds = %23, %7
  %27 = load i32, i32* %3, align 4
  ret i32 %27
}

declare dso_local i32 @AVERROR(i32) #1

declare dso_local i32 @av_log(i32*, i32, i8*, i32) #1

declare dso_local i32 @gnutls_strerror(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
